kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: wordpress
  labels:
    environment: dev
