kubernetes/wordpress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    type: webserver

spec:
  replicas: 3

  selector:
    matchLabels:
      service: webserver
      apps: wordpress

  template:
      metadata:
        name: wordpress
        labels:
          service: webserver
          apps: wordpress

      spec:
        containers:
          - name: webserver
            image: modinbah/wordpress_nginx
            ports:
              - containerPort: 80
