kubernetes/mysql-services.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    service: mariadb-services
    apps: wordpress

spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    service: mariadb
    apps: wordpress
