kubernetes/redis-services.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    service: redis-services
    apps: wordpress

spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    service: redis
    apps: wordpress
