kubernetes/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: wordpress
  annotations:
    linkerd.io/inject: enabled
  labels:
    service: redis
    apps: wordpress
spec:
  containers:
    - name: redis
      image: redis:alpine
      ports:
        - containerPort: 6379
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: beta.kubernetes.io/instance-type
            operator: In
            values:
            - g6-standard-2
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: wordpress
  labels:
    service: redis-services
    apps: wordpress
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    service: redis
    apps: wordpress
