kubernetes/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-wordpress
  namespace: wordpress
  annotations:
    linkerd.io/inject: enabled
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      webserver: nginx
      apps: wordpress
  template:
      metadata:
        name: wordpress
        labels:
          webserver: nginx
          apps: wordpress
      spec:
        containers:
          - name: wordpress
            image: modinbah/wordpress_nginx
            ports:
              - containerPort: 80
        affinity:
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: beta.kubernetes.io/instance-type
                  operator: In
                  values:
                  - g6-standard-1
---
apiVersion: v1
kind: Service
metadata:
  name: svc-wordpress
  namespace: wordpress
  labels:
    service: nginx-services
    apps: wordpress
spec:
  selector:
    webserver: nginx
    apps: wordpress
  ports:
    - port: 80
      targetPort: 80
# ---
# apiVersion: autoscaling/v2beta2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: wordpress-hpa
#   namespace: wordpress
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: deploy-wordpress
#   minReplicas: 1
#   maxReplicas: 10
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 50
