kubernetes/ingresswp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - wp.fixacne.xyz
    secretName: fixacne-tls
  rules:
  - host: wp.fixacne.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-wordpress
          servicePort: 80
